k8s/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shiny-ods
  namespace: colocation-imb
spec:
  # strategy:
  #   type: RollingUpdate
  #   rollingUpdate:
  #     maxUnavailable: 25%
  #     maxSurge: 25%
  selector:
    matchLabels:
      app: shiny-ods
  template:
    metadata:
      labels:
        app: shiny-ods
        deployment: shiny-ods
    spec:
      restartPolicy: Always
      serviceAccountName: imb-anyuid
      containers:
      - name: shiny-ods
        image: quay.apps.dc1openshiftadm.cloud.go.gov.br/dc1openshifthom_colocation-imb/shiny-ods-is:latest
        ports:
        - containerPort: 3838
        resources:
          requests:
            memory: 2Gi
            cpu: 1
          limits:
            memory: 4Gi
            cpu: 2
        volumeMounts:
        - name: shiny-app-storage
          mountPath: .:/app
      volumes:
      - name: shiny-app-storage
        persistentVolumeClaim:
          claimName: shiny-app-pvc
