k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ods-service
  namespace: colocation-imb
  labels:
    app: ods
spec:
  selector:
    app: shiny-ods
    deployment: shiny-ods
  ports:
    - name: http-80
      protocol: TCP
      port: 80
      targetPort: 3838
  type: ClusterIP
