k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ods-route
  namespace: colocation-imb
spec:
  host: odshomolog.imb.go.gov.br
  to:
    kind: Service
    name: ods-service
  port:
    targetPort: http-80
  wildcardPolicy: None
